--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <li>Build the ES5 code with <code>gulp build</code>.</li>
 </ol>
 <h1 id="manual">Manual</h1>
-<p>Checkout the <a href="https://popcorn-official.github.io/popcorn-api/">manual</a> to find out more about this project.</p>
+<p>Checkout the <a href="https://popcorn-official.github.io/popcorn-api/manual/index.html">manual</a> to find out more about this project. Or checkout the documentation for the API routes <a href="http://docs.popcornofficial.apiary.io/#">here</a>.</p>
 <h1 id="license">License</h1>
 <p>MIT License</p>
 <p>Copyright (c) 2016 - Popcorn API - Released under the <a href="LICENSE.txt">MIT license</a>.</p>
