--- a/manual/example.html
+++ b/manual/example.html
@@ -267,7 +267,7 @@
 }</code>
 </code></pre>
 <p><strong>GET - <code>http://localhost:5000/random/anime</code></strong></p>
-<p>Gives a random show from the database. The output will be similar to the on directly above.</p>
+<p>Gives a random anime from the database. The output will be similar to the on directly above.</p>
 <h2 id="movie">Movie</h2>
 <p><strong>GET - <code>http://localhost:5000/movies/{page}</code></strong></p>
 <p>Gives an array of movies. The array has a has a maximum length of 50 movies per page.</p>
